# MLOps_NN_in_numpy

./: .pre-commit-config.yaml  LICENSE  README.md  __init__.py  contributing.md  pyproject.toml
initial_files/: Logvina_assignment0_05_submission_template.ipynb  modules.py  readme.md
